<resources>
    <string name="app_name">QuickRecipe</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="cart">Cart</string>
    <string name="meat">Meat</string>
    <string name="search">Search</string>
    
    <string name="shrimp_tomato_pasta">
1) Heat a large skillet on medium-high heat, add 1 tablespoon butter and 1 tablespoon olive oil until melted. Add fresh shrimp and half the minced garlic. Make sure shrimp is not crowded. Cook for 1 minute on one side until pink on that side. Flip the shrimp over and cook for another 1 or 2 minutes until pink on the other side.\n
\n2) To the skillet with shrimp, add chopped fresh tomatoes, cooked spinach, and remaining amount of minced garlic. Mix everything well, remove from heat while you cook pasta.\n
\n3) In the mean time cook pasta according to package instructions. Drain and rinse with cold water to prevent pasta from cooking and getting mushy.\n
\n4) Add pasta to the skillet with shrimp and vegetables with 1 or 2 tablespoons of butter. Add freshly squeezed lemon juice (depending on the juiciness of your lemon, it could be 1/4 of small lemon or 1/2 lemon). Do not add too much lemon juice. Warm it up on medium heat until shrimp is cooked through, and all ingredients are heated through.\n
\n5) To serve, top with grated mozzarella cheese.</string>

    <string name="pork_chop_zucchini">
        1) Trim the pork chops and discard any excess fat.\n

\n2) Heat oil in skillet over medium-high heat; sear the pork chops for about 3 to 4 minutes on each side.\n

\n3) Drain off any excess fat, leaving the pork chops in the skillet. Add the rice to the skillet along with the tomatoes, green bell pepper, onion, and olives.\n

\n4) Arrange sliced zucchini around the edge of the skillet.\n

\n5) Cover and cook, stirring occasionally, for about 30 minutes, or until the pork chops are cooked through* and the rice is tender.\n

6) Top with the mozzarella cheese and cover the pan. Cook for about 2 minutes longer, or until the cheese has melted.
    </string>

    <string name="lemon_baked_salmon">
1) Preheat the oven to 425 and line a rimmed baking sheet with parchment paper.\n
\n2) Rub salmon skin with some oil and place salmon fillets on the parchment paper, skin down.\n
\n3) Cut the white edges of the asparagus off and cut the stalks in half, to create shorter pieces.\n
\n4) Add asparagus to the baking sheet, around salmon. Try to place asparagus in one layer so it bakes evenly.\n
\n5) In a small bowl, combine lemon juice, olive oil, wine, tomatoes, garlic, and basil. Whisk well and spoon the sauce mixture over salmon and asparagus.\n
\n6) Bake for 18-20 minutes, depending on the thickness of salmon fillets.
    </string>

    <string name="baked_chicken">
1) Preheat oven to 425 degrees. Rinse chicken. In a large baking dish, add chicken and garlic. Mix well to coat evenly and spread in a single layer. Cover and bake for 20-25 minutes. Chicken is cooked when pale and surrounded by clear juices.\n
\n2) In the meanwhile, preheat large ceramic non-stick skillet on low-medium heat. Add onion and saute for a few minutes, stirring occasionally. Add mushrooms and saute for a few more minutes, stirring occasionally. Add bell peppers and saute for 5 more minutes, stirring.\n
\n3) Remove chicken from the oven and turn broiler on High. Separate chicken a bit from each other and top each piece with vegetables (sprinkle around too) and top with cheese. Broil for 5 minutes or until cheese is melted. Serve hot with rice, quinoa or veggies.
    </string>

    <string name="ground_beef_skillet">
1) In a large skillet, heat about a tablespoon of olive oil at medium. Sweat the onions about 3-5 minutes.\n
\n2) Add the ground beef. Be sure to break it apart as you stir so that the meat cooks in small pieces, like pebbles. Cook until browned at medium heat, about 5-8 minutes.\n
\n3) Once the meat is cooked, add the tomatoes and cook on medium heat 3-5 minutes. Then add parsley and lemon juice. Mix together well.\n
\n4) Bring the heat up to Medium/High, add the eggs on top of the mixture in individual spots. Immediately cover the skillet and reduce heat to Medium/Low. This shouldn’t take more than 5-10 minutes, depending on the density of your skillet. Keep checking, so that the whites are cooked but the yolks are still soft.\n
\n6) Once done, remove the cover. Top with more parsley!\n
\n7) Serve with samoon, khubz tanour, pita, or baguette!\n
    </string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signIn">Sign in</string>
    <string name="signUp">Register</string>
    <string name="rememberMe">Remember me</string>
    <string name="firstName">First name</string>
    <string name="reenterPass">Re-enter password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
